# europython-25

./: .gitignore  01-preparation.ipynb  02-knn-optimisation.ipynb  03-jax-gpu.ipynb  04-ray.ipynb  05-grad-optimisation.ipynb  98-ray.ipynb  Justfile  README.md  city_definition.json  demo_house_prices.py  generate_house_prices.py  house_price_model.py  house_prices_scatter.py  instructions.ipynb  knn_jax.py  knn_numba.py  knn_numpy.py  knn_ray.py  knn_ray2.py  knn_ray3.py  location_optimisation.py  pyproject.toml  simple_demo.py  test_knn_jax.py  test_knn_numba.py
solutions/: 02-knn-optimisation.ipynb  03-jax-gpu.ipynb  04-ray.ipynb  05-grad-optimisation.ipynb  data.parquet
src/this_tutorial/: house_prices_scatter.py  knn_numba.py  knn_ray.py  location_optimisation.py  simple_demo.py
tests/: conftest.py  test_knn_jax.py  test_knn_numba.py  test_knn_numpy.py  test_knn_ray.py  test_location_optimisation.py
